test : Statistic 테스트 완료